--- a/.editorconfig
+++ b/.editorconfig
@@ -1,18 +1,13 @@
-# top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
 end_of_line = lf
 insert_final_newline = true
-
-# Matches multiple files with brace expansion notation
-# Set default charset
-[*.{js}]
-charset = utf-8
 indent_style = space
-indent_style = 2
+indent_size = 2
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
 
-# Tab indentation (no size specified)
-[Makefile]
-indent_style = tab
+[*.md]
+trim_trailing_whitespace = false
