--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "bono-norm",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "description": "Node + Bono + Norm get along together",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "mocha test/**",
-    "coverage": "nyc --reporter=lcov npm test"
+    "test": "npm run test:coverage",
+    "test:unit": "mocha test/**",
+    "test:coverage": "nyc --check-coverage --reporter=html --reporter=text mocha test/**"
   },
   "author": "Ganesha <reekoheek@gmail.com>",
   "license": "MIT",
@@ -15,10 +16,21 @@
     "url": "https://github.com/reekoheek/node-bono-norm.git"
   },
   "devDependencies": {
-    "bono": "^1.0.2",
-    "husky": "^1.3.1",
-    "node-norm": "^1.2.20",
-    "supertest": "^3.3.0"
+    "bono": "^1.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-config-xinix": "^1.1.13",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-mocha": "^6.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.1.1",
+    "mocha": "^7.1.1",
+    "node-norm": "^1.4.2",
+    "nyc": "^15.0.0",
+    "supertest": "^4.0.2"
   },
   "peerDependencies": {
     "bono": "^1.0.2",
@@ -26,7 +38,12 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm test"
+      "pre-commit": "lint-staged && npm test"
     }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint"
+    ]
   }
 }
